@@ -1,5 +1,17 @@
 2012-06-01  Filip Pizlo  <fpizlo@apple.com>
 
+        DFG arguments simplification phase uses a node.codeOrigin after appending a node
+        https://bugs.webkit.org/show_bug.cgi?id=88151
+
+        Reviewed by Geoffrey Garen.
+        
+        The right thing to do is to save the CodeOrigin before appending to the graph.
+
+        * dfg/DFGArgumentsSimplificationPhase.cpp:
+        (JSC::DFG::ArgumentsSimplificationPhase::run):
+
+2012-06-01  Filip Pizlo  <fpizlo@apple.com>
+
         DFG should not emit unnecessary speculation checks when performing an int32 to double conversion on
         a value that is proved to be a number, predicted to be an int32, but not proved to be an int32
         https://bugs.webkit.org/show_bug.cgi?id=88146
